upgrade: ubuntu@18.04, jvm@11. enable G1GC garbage collector